add route, controller, model for compare
